# nexora-saas

./: .coverage  .gitattributes  .gitignore  README.md  SHARED_MODULES_MANIFEST.json  _check_roles.py  _check_roles2.py  _clear_and_smoke.py  _debug_auth.py  _debug_auth2.py  _debug_auth3.py  _deploy.py  _deploy2.py  _deploy_3domain.py  _deploy_auth_fix.py  _deploy_auth_fix_v2.py  _deploy_auth_fix_v3.py  _deploy_check.py  _deploy_full.py  _deploy_healthcheck.py  _deploy_operator.py  _deploy_v2.py  _diag_service.py  _fix_namespace.py  _fix_roles.py  _gather_tenant_info.py  _gather_tenant_info2.py  _gather_tenant_info3.py  _gather_tenant_info4.py  _gather_tenant_info5.py  _proxy_console.py  _redeploy.py  _smoke_detail.py  _ssh_check_helpers.py  _ssh_check_ynh.py  _ssh_deploy.py  _ssh_exec.py  _ssh_fix_systemd_unit.py  _ssh_helper.py  _ssh_repair_runtime.py  (+6 more)
.github/: copilot-instructions.md
blueprints/: INSTRUCTIONS.md
deploy/: INSTRUCTIONS.md  adoption-report.sh  bootstrap-adopt.sh  bootstrap-augment.sh  bootstrap-common.inc.sh  bootstrap-detect-mode.sh  bootstrap-fresh.sh  bootstrap-full-platform.sh  bootstrap-node.sh  bootstrap-ynh-local.sh  deploy-subdomains.sh  prepare-local-package.sh
docs/: API_SURFACE_REFERENCE.md  ARCHITECTURE.md  ARCHIVE_AUDITS_2026.md  CHANGELOG.md  CI_QUALITY_GATES.md  COMMERCIAL_OPERATING_MODEL.md  CONSOLE_OPERATOR_GUIDE.md  DEPLOYMENT.md  DOCUMENTATION_ARCHITECTURE.md  DOC_CODE_AUDIT.md  IMPLEMENTATION_MASTER_PLAN.md  ROADMAP.md  RUNBOOKS.md  SAAS_STRATEGY.md  SECURITY.md  TECH_DEBT_REGISTER.md  docs_inventory.yaml  finalization-board.md  finalization-checklist.md  finalization-v2.1-backlog.md  plan-nexoraFinalisation.prompt.md
scripts/: INSTRUCTIONS.md  bootstrap_slo_summary.py  build_offline_bundle.sh  build_vm_offline_kit.sh  check-root-test-artifacts.sh  ci_check_saas_isolation.py  ci_cost_report.py  dev-compile-check.sh  docs_obsolescence_audit.py  e2e_operator_matrix.sh  export_split_repos.sh  load_test_multitenant.py  node_coherence_audit.py  packagecheck-local.sh  release.sh  sync_version.py
tests/: INSTRUCTIONS.md  test_admin_actions.py  test_adoption_report.py  test_api_contract.py  test_app_profiles.py  test_auth_runtime_resilience.py  test_automation_engine.py  test_blueprints_additional.py  test_bootstrap_orchestration.py  test_ci_guardrails.py  test_console_handlers.py  test_console_tdd_missing_features.py  (+58 more)
(+218 files in other folders)
