[project]
name = "nexora-saas"
version = "2.0.0"
description = "Nexora SaaS control plane — multi-node orchestration, AI automation, PRA, governance, and multi-tenancy over YunoHost"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "informel-tic" }]
keywords = ["yunohost", "nexora", "control-plane", "fleet", "pra", "security", "monitoring", "blueprints", "governance", "automation", "edge", "portal"]
dependencies = [
  "mcp[cli]>=1.26.0",
  "pydantic>=2.0",
  "uvicorn>=0.30.0",
  "fastapi>=0.115.0",
  "pyyaml>=6.0.0",
  "jinja2>=3.1.0",
  "httpx>=0.27.0",
]

[project.scripts]
nexora-control-plane = "control_plane.backend:main"
nexora-node-agent = "node_agent.agent:main"
yunohost-mcp-server = "yunohost_mcp.cli:main"
nexora-job = "nexora_saas.job_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexora_saas", "src/nexora_node_sdk", "src/yunohost_mcp", "apps/control_plane", "apps/console", "apps/node_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 320

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
